--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
   <!-- Features -->
   <section class="features">
     <div class="feature">
-      <img src="/images/kenya.jpeg" alt="Kenyan Land" />
+      <img src="./images/kenya.jpeg" alt="Kenyan Land" />
       <h3>Verified Kenyan Plots</h3>
       <p>Every plot listed on PlotTosha is thoroughly verified and legal.</p>
     </div>
     <div class="feature">
-      <img src="/images/payment-options.png" alt="Secure Payment" />
+      <img src="./images/payment-options.png" alt="Secure Payment" />
       <h3>Secure Payments</h3>
       <p>Pay safely using mobile money, bank transfers, or escrow partners.</p>
     </div>
     <div class="feature">
-      <img src="/images/support.webp" alt="Support" />
+      <img src="./images/support.webp" alt="Support" />
       <h3>Expert Assistance</h3>
       <p>Our land agents are ready to guide you through the process anytime.</p>
     </div>
