Correcting img source for Github

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="feature">
       <img src="./images/support.webp" alt="Support" />
       <h3>Expert Assistance</h3>
-      <p>Our land agents are ready to guide you through the process anytime.</p>
+      <p>Our land agents are ready to guide you through the process.</p>
     </div>
   </section>
 
