--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <a href="#">Home</a>
       <a href="#">Land Listings</a>
       <a href="#">About</a>
-      <a href="#" class="btn-outline">Login</a>
-      <a href="#" class="btn">Register</a>
+      <a href="login.html" class="btn-outline">Login</a>
+      <a href="register.html" class="btn">Register</a>
     </nav>
     <button id="hamburger" class="hamburger" aria-label="Menu">
       <span></span>
