--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a href="#" class="btn-outline">Login</a>
     <a href="#" class="btn">Register</a>
   </div>
-
+ <!-- test  -->
   <!-- Blur Overlay -->
   <div id="overlay" class="hide"></div>
 
