--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <a href="#">Home</a>
     <a href="#">Land Listings</a>
     <a href="#">About</a>
-    <a href="#" class="btn-outline">Login</a>
-    <a href="#" class="btn">Register</a>
+    <a href="login.html" class="btn-outline">Login</a>
+    <a href="register.html" class="btn">Register</a>
   </div>
  
   <!-- Blur Overlay -->
